--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,9 @@ set -g visual-activity on
 
 # Enable vi keys.
 setw -g mode-keys vi
+list-keys -t vi-copy
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 
  # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
