--- a/.tigrc
+++ b/.tigrc
@@ -2,8 +2,13 @@
 # set show-date = relative        # Show relative commit date.
 set show-rev-graph = yes        # Show revision graph?
 set show-refs = yes             # Show references?
-#set commit-order = topo         # Order commits topologically
 set show-line-numbers = no      # Show line numbers?
 set line-number-interval = 5    # Interval between line numbers
 set horizontal-scroll = 33%     # Scroll 33% of the view width
+set show-date = yes
+set commit-order = topo         # Order commits topologically
+set show-line-numbers = no      # Show line numbers?
+set line-number-interval = 5    # Interval between line numbers
+set horizontal-scroll = 33%     # Scroll 33% of the view width
+set blame-options = -C -C -C    # Blame lines from other files
 set line-graphics = ascii
